--- a/print.html
+++ b/print.html
@@ -263,7 +263,7 @@ Bear in mind that syncing will start from the pruned Milestone, not Genesis.</p>
 <ol>
 <li>Kickstart a <code>rosetta-iota</code> server:</li>
 </ol>
-<pre><code>$ cargo run -- --iota-endpoint http://0.0.0.0:14265 --network alphanet1 --port 3030 --mode online
+<pre><code>$ cargo run -- --iota-endpoint http://0.0.0.0:14265 --network testnet4 --port 3030 --mode online
 </code></pre>
 <ol start="2">
 <li>From a new terminal, you can test each endpoint via <code>curl</code>:</li>
@@ -276,32 +276,32 @@ Bear in mind that syncing will start from the pruned Milestone, not Genesis.</p>
 <ul>
 <li><code>/network/status</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/network/status' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;alphanet1&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/network/status' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/network/options</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/network/options' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;alphanet1&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/network/options' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/block</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/block' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;alphanet1&quot;},&quot;block_identifier&quot;:{&quot;index&quot;:2,&quot;hash&quot;:&quot;&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/block' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;},&quot;block_identifier&quot;:{&quot;index&quot;:2,&quot;hash&quot;:&quot;&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/account/balance</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/account/balance' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;alphanet1&quot;},&quot;account_identifier&quot;:{&quot;address&quot;:&quot;atoi1qx0pteshrd554xtea4v3rklr97kzgc95umcpckn9pl897gnedk7gugyk5ld&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/account/balance' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;},&quot;account_identifier&quot;:{&quot;address&quot;:&quot;atoi1qx0pteshrd554xtea4v3rklr97kzgc95umcpckn9pl897gnedk7gugyk5ld&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/account/coins</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/account/coins' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;alphanet1&quot;},&quot;account_identifier&quot;:{&quot;address&quot;:&quot;atoi1qx0pteshrd554xtea4v3rklr97kzgc95umcpckn9pl897gnedk7gugyk5ld&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/account/coins' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;},&quot;account_identifier&quot;:{&quot;address&quot;:&quot;atoi1qx0pteshrd554xtea4v3rklr97kzgc95umcpckn9pl897gnedk7gugyk5ld&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/construction/derive</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/construction/derive' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;alphanet1&quot;},&quot;public_key&quot;:{&quot;hex_bytes&quot;:&quot;6f8f4d77e94bce3900078b89319e6e25b341d47669a76ae4bf26677d377533f0&quot;,&quot;curve_type&quot;:&quot;edwards25519&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/construction/derive' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;},&quot;public_key&quot;:{&quot;hex_bytes&quot;:&quot;6f8f4d77e94bce3900078b89319e6e25b341d47669a76ae4bf26677d377533f0&quot;,&quot;curve_type&quot;:&quot;edwards25519&quot;}}' | jq
 </code></pre>
 
                     </main>
