--- a/print.html
+++ b/print.html
@@ -211,7 +211,7 @@ That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</cod
 <li><code>UTXO_UNSPENT</code>, meaning that the UTXO Output has not yet been spent.</li>
 </ul>
 <p>The <code>UTXO Operation</code> <code>account</code> field is defined as the <code>address</code> value from the <code>UTXO</code>.</p>
-<p>The <code>UTXO Operation</code> <a href="https://www.rosetta-api.org/docs/models/CoinChange.html">coin_change</a> Object is defined as:</p>
+<p>The <code>UTXO Operation</code> <code>coin_change</code> Object (<a href="https://www.rosetta-api.org/docs/models/CoinChange.html">CoinChange</a> type) is defined as:</p>
 <ul>
 <li><code>coin_identifier</code>: <code>output_id</code></li>
 <li><code>coin_action</code>: either
