--- a/welcome.html
+++ b/welcome.html
@@ -281,7 +281,7 @@ That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</cod
             &quot;coin_identifier&quot;:{
                &quot;identifier&quot;:&quot;fc11e18ab005fe3b1d5ba92dca77a289fe497b3ee41b843526589ec4d5cb9edd0100&quot;
             },
-            &quot;coin_action&quot;:&quot;UTXO_CONSUMED&quot;
+            &quot;coin_action&quot;:&quot;UTXO_CREATED&quot;
          }
       }
    ]
