--- a/print.html
+++ b/print.html
@@ -194,7 +194,7 @@
 <p>Syncing <code>rosetta-cli</code> is also affected by this. Syncing from genesis is only possible with a Permanode, as well. Otherwise, the <code>test.sh</code> shows how to use the Fullnode's <code>pruningIndex</code> as the <code>start_index</code> for the configuration <code>JSON</code>.</p>
 <h3><a class="header" href="#transactions-and-operations" id="transactions-and-operations">Transactions and Operations</a></h3>
 <p>The <code>/block</code> endpoint responds with information about balance changing Transactions that happened on a specific Milestone.
-That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</code> IOTA Fullnode endpoint, where a list of <strong>Created</strong> and <strong>Consumed</strong> UTXO Outputs is returned. All returned outputs from this endpoint describe included ledger-changes.</p>
+That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</code> IOTA Fullnode endpoint, where a list of <strong>Created</strong> and <strong>Consumed</strong> UTXO Outputs is returned.</p>
 <p>Each UTXO Output contains a <code>output_id</code>, a <code>transaction_id</code> and a <code>output_index</code>, where <code>output_id = transaction_id + output_index</code>.</p>
 <p>In terms of Rosetta Models, the <code>TransactionIdentifier</code> of a <code>Transaction</code> Object is defined by an IOTA <code>transaction_id</code>.</p>
 <p>Each <a href="https://www.rosetta-api.org/docs/models/Transaction.html">Transaction</a> Object has an array of <a href="https://www.rosetta-api.org/docs/models/Operation.html">Operations</a>, each one representing a UTXO Output.</p>
@@ -204,16 +204,11 @@ That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</cod
 <li><code>network_index</code>: <code>output_index</code></li>
 </ul>
 <p>The <code>UTXO Operation</code> <code>related_operations</code> field is defined as an array with the <code>index</code> of all <code>UTXO Operation</code> Objects contained in the same <code>Transaction</code> Object.</p>
-<p>The <code>UTXO Operation</code> <code>type</code> field can be either:</p>
-<ul>
-<li><code>&quot;UTXO_INPUT&quot;</code>, describes where coins are coming from to the Transaction</li>
-<li><code>&quot;UTXO_OUTPUT&quot;</code>, describes where coins are going out from the Transaction</li>
-</ul>
+<p>The <code>UTXO Operation</code> <code>type</code> field is always <code>&quot;UTXO&quot;</code>.</p>
 <p>The <code>UTXO Operation</code> <code>status</code> field is defined as either:</p>
 <ul>
-<li><code>&quot;SUCCESS&quot;</code>, meaning that the output has been included in the ledger state.</li>
-<li><code>&quot;SKIPPED&quot;</code>, meaning that the output has not been included in the ledger state (e.g. since it conflicts with another Transaction).
-Note, that the operations that are used to construct a transaction (Construction API) don't populate the <code>status</code> field.</li>
+<li><code>&quot;UTXO_SPENT&quot;</code>, meaning that the UTXO Output has already been spent (possibly by another Transaction).</li>
+<li><code>&quot;UTXO_UNSPENT&quot;</code>, meaning that the UTXO Output has not yet been spent.</li>
 </ul>
 <p>The <code>UTXO Operation</code> <code>account</code> field is defined as the <code>address</code> value from the UTXO.</p>
 <p>The <code>UTXO Operation</code> <code>coin_change</code> Object (<a href="https://www.rosetta-api.org/docs/models/CoinChange.html">CoinChange</a> type) is defined as:</p>
@@ -243,8 +238,8 @@ Note, that the operations that are used to construct a transaction (Construction
                &quot;index&quot;:1
             }
          ],
-         &quot;type&quot;:&quot;UTXO_INPUT&quot;,
-         &quot;status&quot;:&quot;SUCCESS&quot;,
+         &quot;type&quot;:&quot;UTXO&quot;,
+         &quot;status&quot;:&quot;UTXO_UNSPENT&quot;,
          &quot;account&quot;:{
             &quot;address&quot;:&quot;atoi1qxslutqz5466ucd60d8qrkcl9cw6m6shgnfuyvpdam5442m60kpt7xns4l0&quot;
          },
@@ -272,8 +267,8 @@ Note, that the operations that are used to construct a transaction (Construction
                &quot;index&quot;:0
             }
          ],
-         &quot;type&quot;:&quot;UTXO_OUTPUT&quot;,
-         &quot;status&quot;:&quot;SUCCESS&quot;,
+         &quot;type&quot;:&quot;UTXO&quot;,
+         &quot;status&quot;:&quot;UTXO_SPENT&quot;,
          &quot;account&quot;:{
             &quot;address&quot;:&quot;atoi1q8k69lxuxljdgeqt7tucvtdfk3hrvrly7rzz65w57te6drf3expsjth4u2j&quot;
          },
@@ -304,7 +299,7 @@ Bear in mind that syncing will start from the pruned Milestone, not Genesis.</p>
 <ol>
 <li>Kickstart a <code>rosetta-iota</code> server:</li>
 </ol>
-<pre><code>$ cargo run -- --iota-endpoint http://0.0.0.0:14265 --network testnet4 --port 3030 --mode online
+<pre><code>$ cargo run -- --iota-endpoint http://0.0.0.0:14265 --network testnet5 --port 3030 --mode online
 </code></pre>
 <ol start="2">
 <li>From a new terminal, you can test each endpoint via <code>curl</code>:</li>
@@ -317,32 +312,32 @@ Bear in mind that syncing will start from the pruned Milestone, not Genesis.</p>
 <ul>
 <li><code>/network/status</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/network/status' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/network/status' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet5&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/network/options</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/network/options' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/network/options' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet5&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/block</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/block' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;},&quot;block_identifier&quot;:{&quot;index&quot;:2,&quot;hash&quot;:&quot;&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/block' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet5&quot;},&quot;block_identifier&quot;:{&quot;index&quot;:2,&quot;hash&quot;:&quot;&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/account/balance</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/account/balance' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;},&quot;account_identifier&quot;:{&quot;address&quot;:&quot;atoi1qx0pteshrd554xtea4v3rklr97kzgc95umcpckn9pl897gnedk7gugyk5ld&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/account/balance' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet5&quot;},&quot;account_identifier&quot;:{&quot;address&quot;:&quot;atoi1qx0pteshrd554xtea4v3rklr97kzgc95umcpckn9pl897gnedk7gugyk5ld&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/account/coins</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/account/coins' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;},&quot;account_identifier&quot;:{&quot;address&quot;:&quot;atoi1qx0pteshrd554xtea4v3rklr97kzgc95umcpckn9pl897gnedk7gugyk5ld&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/account/coins' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet5&quot;},&quot;account_identifier&quot;:{&quot;address&quot;:&quot;atoi1qx0pteshrd554xtea4v3rklr97kzgc95umcpckn9pl897gnedk7gugyk5ld&quot;}}' | jq
 </code></pre>
 <ul>
 <li><code>/construction/derive</code></li>
 </ul>
-<pre><code>$ curl --request POST 'http://localhost:3030/construction/derive' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet4&quot;},&quot;public_key&quot;:{&quot;hex_bytes&quot;:&quot;6f8f4d77e94bce3900078b89319e6e25b341d47669a76ae4bf26677d377533f0&quot;,&quot;curve_type&quot;:&quot;edwards25519&quot;}}' | jq
+<pre><code>$ curl --request POST 'http://localhost:3030/construction/derive' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet5&quot;},&quot;public_key&quot;:{&quot;hex_bytes&quot;:&quot;6f8f4d77e94bce3900078b89319e6e25b341d47669a76ae4bf26677d377533f0&quot;,&quot;curve_type&quot;:&quot;edwards25519&quot;}}' | jq
 </code></pre>
 
                     </main>
